tests/baselines/reference/parserUnaryExpression5.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Expressions/parserUnaryExpression5.ts (2 errors) ====
    ++ delete foo.bar
       ~~~~~~~~~~~~~~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
              ~~~
!!! error TS2304: Cannot find name 'foo'.